added dockerization and fixed some bugs
